# ultimate-planner

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  Requirement.md  docker-compose.yml  pyproject.toml  unified_task_planner.db
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
alembic/: env.py
alembic/versions/: 7084e0d45639_initial_migration_create_unified_tasks_.py  818e004fdc75_add_user_model_for_authentication.py  9473c1d452df_add_mfa_tables_and_user_relationship.py  add_session_management.py
app/: database.py  main.py
app/auth/: __init__.py  dependencies.py  mfa_example.py  mfa_service.py  middleware_rate_limit.py  oauth.py  oauth_config.py  oauth_providers.py  router.py  router_mfa.py  router_oauth_pkce.py  router_session.py  schemas.py  schemas_mfa.py  schemas_pkce.py  schemas_session.py  security.py  service.py
app/config/: redis_config.py
app/core/: logging.py
app/models/: __init__.py  base.py  mfa.py  session.py  task_dependency.py  unified_task.py  user.py  user_integration.py
app/services/: audit_logging_service.py  jwt_service.py  pkce_service.py  rate_limiting_service.py  redis_session_service.py
app/templates/: base.html  index.html  label_options.html  task_item.html  task_list.html
config/: init-db.sql  nginx.conf  redis.conf
docs/: ENTERPRISE_AUTH_SYSTEM.md  REDIS_SESSION_SYSTEM.md  SESSION_QUICKSTART.md  mfa_integration_guide.md
tests/: conftest.py  test_auth.py  test_comprehensive_auth_integration.py  test_mfa.py  test_models.py  test_oauth.py  test_pkce_oauth.py  test_sessions.py
(+22 files in other folders)
